<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:key="gps"
        android:title="@string/settings_geo"
        android:summary="@string/settings_geo_summary"
        android:defaultValue="false"
        />

    <SeekBarPreference
        android:key="range"
        android:id="@+id/range"
        android:title="@string/settings_distance"
        android:max="4900"
        />

    <CheckBoxPreference
        android:key="pagination"
        android:title="@string/settings_pagination"
        android:defaultValue="false"
        />

    <EditTextPreference
        android:key="pseudo"
        android:title="@string/settings_pseudo"
        android:summary="@string/settings_pseudo_summary"
        android:defaultValue="Anonymous"
        />

</PreferenceScreen>