<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/ouvrage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerVertical="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/underground"
            android:textSize="5pt"
            android:text="@string/filter_ouvrage_underground" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/allOuvrage"
            android:checked="true"
            android:textSize="5pt"
            android:text="@string/filter_tous" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/outdoor"
            android:textSize="5pt"
            android:text="@string/filter_ouvrage_outdoor" />

    </RadioGroup>
</RelativeLayout>
